--- a/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
@@ -1,91 +1,91 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: '(Verse 1)
+  - answer: '(Verse 1)
 
-    In the heart of mountains, where secrets abide,
+      In the heart of mountains, where secrets abide,
 
-    Nature''s ballad, a tale of pride.
+      Nature''s ballad, a tale of pride.
 
-    Majestic peaks pierce the sky, so high,
+      Majestic peaks pierce the sky, so high,
 
-    Guardians of stories, where eagles fly.
-
-
-    (Chorus)
-
-    Oh, the symphony of mountains, a ballad so grand,
-
-    Whispers of ancient times in every rock and sand.
-
-    Secrets hidden in shadows, in valleys untold,
-
-    Nature''s ballad, a mystery to behold.
+      Guardians of stories, where eagles fly.
 
 
-    (Verse 2)
+      (Chorus)
 
-    Glaciers carving, a sculptor''s hand,
+      Oh, the symphony of mountains, a ballad so grand,
 
-    Shaping the mountains, as time expands.
+      Whispers of ancient times in every rock and sand.
 
-    Cascading waterfalls, a crystal clear decree,
+      Secrets hidden in shadows, in valleys untold,
 
-    Echoing tales of the mountains, for all to see.
-
-
-    (Chorus)
-
-    Oh, the symphony of mountains, a ballad so grand,
-
-    Whispers of ancient times in every rock and sand.
-
-    Secrets hidden in shadows, in valleys untold,
-
-    Nature''s ballad, a mystery to behold.
+      Nature''s ballad, a mystery to behold.
 
 
-    (Bridge)
+      (Verse 2)
 
-    Beneath the moon''s silver and shimmering veil,
+      Glaciers carving, a sculptor''s hand,
 
-    Mountains stand tall, in the night''s quiet braille.
+      Shaping the mountains, as time expands.
 
-    Stars twinkle above, like secrets in flight,
+      Cascading waterfalls, a crystal clear decree,
 
-    Nature''s ballad, a beacon of light.
-
-
-    (Verse 3)
-
-    In the silence of summits, where winds speak in codes,
-
-    Legends of old, in the mountain''s abodes.
-
-    Echoes of history, in every stone''s crevice,
-
-    Nature''s ballad, a timeless device.
+      Echoing tales of the mountains, for all to see.
 
 
-    (Chorus)
+      (Chorus)
 
-    Oh, the symphony of mountains, a ballad so grand,
+      Oh, the symphony of mountains, a ballad so grand,
 
-    Whispers of ancient times in every rock and sand.
+      Whispers of ancient times in every rock and sand.
 
-    Secrets hidden in shadows, in valleys untold,
+      Secrets hidden in shadows, in valleys untold,
 
-    Nature''s ballad, a mystery to behold.
+      Nature''s ballad, a mystery to behold.
 
 
-    (Outro)
+      (Bridge)
 
-    As seasons change, and winds whisper and sigh,
+      Beneath the moon''s silver and shimmering veil,
 
-    The mountain''s ballad, forever to lie.
+      Mountains stand tall, in the night''s quiet braille.
 
-    In every snowflake, in every mountain''s crest,
+      Stars twinkle above, like secrets in flight,
 
-    Nature''s ballad, a timeless guest.'
-  question: Write a ballad about a majestic mountain range and the secrets it holds
-    within its peaks.
+      Nature''s ballad, a beacon of light.
+
+
+      (Verse 3)
+
+      In the silence of summits, where winds speak in codes,
+
+      Legends of old, in the mountain''s abodes.
+
+      Echoes of history, in every stone''s crevice,
+
+      Nature''s ballad, a timeless device.
+
+
+      (Chorus)
+
+      Oh, the symphony of mountains, a ballad so grand,
+
+      Whispers of ancient times in every rock and sand.
+
+      Secrets hidden in shadows, in valleys untold,
+
+      Nature''s ballad, a mystery to behold.
+
+
+      (Outro)
+
+      As seasons change, and winds whisper and sigh,
+
+      The mountain''s ballad, forever to lie.
+
+      In every snowflake, in every mountain''s crest,
+
+      Nature''s ballad, a timeless guest.'
+    question: Write a ballad about a majestic mountain range and the secrets it holds within its peaks.
 task_description: ''
