--- a/compositional_skills/writing/freeform/poetry/ode/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ode/qna.yaml
@@ -1,78 +1,78 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: 'Ode to the Lightning''s Power and Inspiration
+  - answer: 'Ode to the Lightning''s Power and Inspiration
 
 
-    Oh, Lightning! Luminous muse of the night,
+      Oh, Lightning! Luminous muse of the night,
 
-    Your dazzling flash, a beacon of insight.
+      Your dazzling flash, a beacon of insight.
 
-    In the depths of the soul, you ignite,
+      In the depths of the soul, you ignite,
 
-    A spark of inspiration, pure and bright.
-
-
-    A force unseen, yet so wild and free,
-
-    You dance upon the canvas of the sky.
-
-    A symphony of thunder, a lyrical cry,
-
-    A testament to the power that lies.
+      A spark of inspiration, pure and bright.
 
 
-    In the silence of the night, you roar,
+      A force unseen, yet so wild and free,
 
-    Awakening the muses that within us bore.
+      You dance upon the canvas of the sky.
 
-    A lightning bolt, a stroke of art,
+      A symphony of thunder, a lyrical cry,
 
-    A masterpiece, a poet''s heart.
-
-
-    The stormy tempest, a creative force,
-
-    A whirlwind of thoughts, a lyrical discourse.
-
-    In the chaos, a melody is born,
-
-    A harmony of ideas, a new dawn.
+      A testament to the power that lies.
 
 
-    The lightning''s glow, a radiant hue,
+      In the silence of the night, you roar,
 
-    Illuminates the mind, a fresh view.
+      Awakening the muses that within us bore.
 
-    A spark of genius, a flash of thought,
+      A lightning bolt, a stroke of art,
 
-    A creative surge, a soul has sought.
-
-
-    The lightning''s path, a winding trace,
-
-    A labyrinth of ideas, a mental space.
-
-    A journey of discovery, a quest divine,
-
-    A tapestry of wisdom, a creative design.
+      A masterpiece, a poet''s heart.
 
 
-    The lightning''s power, a force to harness,
+      The stormy tempest, a creative force,
 
-    A wellspring of creativity, a treasure to amass.
+      A whirlwind of thoughts, a lyrical discourse.
 
-    In the depths of introspection, a truth unfolds,
+      In the chaos, a melody is born,
 
-    A testament to the stories that within us holds.
+      A harmony of ideas, a new dawn.
 
 
-    Oh, Lightning! A muse of the night,
+      The lightning''s glow, a radiant hue,
 
-    Your dazzling flash, a poet''s delight.
+      Illuminates the mind, a fresh view.
 
-    In the silence of the soul, you ignite,
+      A spark of genius, a flash of thought,
 
-    A spark of inspiration, pure and bright.'
-  question: Craft an ode to the power of the lightning, and how it can help you to
-    tap into the beauty of creativity and inspiration.
+      A creative surge, a soul has sought.
+
+
+      The lightning''s path, a winding trace,
+
+      A labyrinth of ideas, a mental space.
+
+      A journey of discovery, a quest divine,
+
+      A tapestry of wisdom, a creative design.
+
+
+      The lightning''s power, a force to harness,
+
+      A wellspring of creativity, a treasure to amass.
+
+      In the depths of introspection, a truth unfolds,
+
+      A testament to the stories that within us holds.
+
+
+      Oh, Lightning! A muse of the night,
+
+      Your dazzling flash, a poet''s delight.
+
+      In the silence of the soul, you ignite,
+
+      A spark of inspiration, pure and bright.'
+    question: Craft an ode to the power of the lightning, and how it can help you to tap into the beauty of creativity and inspiration.
 task_description: ''
