--- a/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
@@ -1,122 +1,122 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: '**Title: "The Final Heist"**
+  - answer: '**Title: "The Final Heist"**
 
 
-    **INT. HIGH-TECH VAULT - NIGHT**
+      **INT. HIGH-TECH VAULT - NIGHT**
 
 
-    *A group of seasoned thieves, LEADER (40s, charismatic mastermind), HACKER (30s,
-    introverted genius), MUSCLE (20s, athletic enforcer), and WHEELMAN (50s, grizzled
-    getaway driver), are in the midst of a daring heist.*
+      *A group of seasoned thieves, LEADER (40s, charismatic mastermind), HACKER (30s, introverted genius), MUSCLE (20s, athletic enforcer), and WHEELMAN
+      (50s, grizzled getaway driver), are in the midst of a daring heist.*
 
 
-    **LEADER**
+      **LEADER**
 
-    (whispering)
+      (whispering)
 
-    Just like the drill said. Hacker, you''re up.
+      Just like the drill said. Hacker, you''re up.
 
 
-    **INT. HACKER''S VAN - NIGHT**
+      **INT. HACKER''S VAN - NIGHT**
 
 
-    *Hacker works his magic on the state-of-the-art vault security system.*
+      *Hacker works his magic on the state-of-the-art vault security system.*
 
 
-    **HACKER**
+      **HACKER**
 
-    (murmuring)
+      (murmuring)
 
-    Almost there...
+      Almost there...
 
 
-    **INT. HIGH-TECH VAULT - NIGHT**
+      **INT. HIGH-TECH VAULT - NIGHT**
 
 
-    *The vault door clicks open.*
+      *The vault door clicks open.*
 
 
-    **MUSCLE**
+      **MUSCLE**
 
-    (grinning)
+      (grinning)
 
-    We''re in.
+      We''re in.
 
 
-    **INT. HACKER''S VAN - NIGHT**
+      **INT. HACKER''S VAN - NIGHT**
 
 
-    *Suddenly, the van''s alarm blares. Hacker looks shocked.*
+      *Suddenly, the van''s alarm blares. Hacker looks shocked.*
 
 
-    **HACKER**
+      **HACKER**
 
-    (into earpiece)
+      (into earpiece)
 
-    Leader, we have a problem.
+      Leader, we have a problem.
 
 
-    **EXT. BANK - NIGHT**
+      **EXT. BANK - NIGHT**
 
 
-    *Police cars surround the building. Wheelman waits in the getaway car.*
+      *Police cars surround the building. Wheelman waits in the getaway car.*
 
 
-    **WHEELMAN**
+      **WHEELMAN**
 
-    (into earpiece)
+      (into earpiece)
 
-    We''re compromised. Abort!
+      We''re compromised. Abort!
 
 
-    **INT. HIGH-TECH VAULT - NIGHT**
+      **INT. HIGH-TECH VAULT - NIGHT**
 
 
-    *The team frantically gathers the loot.*
+      *The team frantically gathers the loot.*
 
 
-    **LEADER**
+      **LEADER**
 
-    (yelling)
+      (yelling)
 
-    Leave it! We''ll come back for it!
+      Leave it! We''ll come back for it!
 
 
-    **EXT. BANK - NIGHT**
+      **EXT. BANK - NIGHT**
 
 
-    *The team runs out, guns blazing. Wheelman speeds off.*
+      *The team runs out, guns blazing. Wheelman speeds off.*
 
 
-    **INT. POLICE CAR - NIGHT**
+      **INT. POLICE CAR - NIGHT**
 
 
-    *A detective, DETECTIVE JONES (50s, determined), watches the scene unfold.*
+      *A detective, DETECTIVE JONES (50s, determined), watches the scene unfold.*
 
 
-    **DETECTIVE JONES**
+      **DETECTIVE JONES**
 
-    (into radio)
+      (into radio)
 
-    I want that team found. No one pulls a heist on my watch.
+      I want that team found. No one pulls a heist on my watch.
 
 
-    **EXT. CITY STREETS - NIGHT**
+      **EXT. CITY STREETS - NIGHT**
 
 
-    *The getaway car weaves through traffic, chased by police cars.*
+      *The getaway car weaves through traffic, chased by police cars.*
 
 
-    **LEADER**
+      **LEADER**
 
-    (into earpiece)
+      (into earpiece)
 
-    We''ll regroup. This isn''t over.
+      We''ll regroup. This isn''t over.
 
 
-    *The car disappears into the night, leaving the blaring sirens behind.*
+      *The car disappears into the night, leaving the blaring sirens behind.*
 
-    '
-  question: Write a screenplay about a heist gone wrong.
+      '
+    question: Write a screenplay about a heist gone wrong.
 task_description: ''
