--- a/compositional_skills/writing/freeform/poetry/epic_poetry/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/epic_poetry/qna.yaml
@@ -1,76 +1,76 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: 'In the heart of a forest, vast and green,
+  - answer: 'In the heart of a forest, vast and green,
 
-    Lived a mythical creature, unseen.
+      Lived a mythical creature, unseen.
 
-    A tale of wonder, of a beast so grand,
+      A tale of wonder, of a beast so grand,
 
-    Roaming the depths of this enchanted land.
-
-
-    A young explorer, brave and bold,
-
-    Heard the whispers of the tales of old.
-
-    With a heart full of courage, and a spirit so bright,
-
-    He ventured forth on a starlit night.
+      Roaming the depths of this enchanted land.
 
 
-    Through the shadows of the trees, tall and grand,
+      A young explorer, brave and bold,
 
-    Guided by the moon''s soft, silver band.
+      Heard the whispers of the tales of old.
 
-    The forest stirred, a symphony of sound,
+      With a heart full of courage, and a spirit so bright,
 
-    In the heart of nature, where mysteries are found.
-
-
-    The explorer journeyed, through the forest''s decree,
-
-    In search of the creature, as elusive as the sea.
-
-    Days turned to nights, and nights to days,
-
-    In the epic quest, the explorer pressed on his ways.
+      He ventured forth on a starlit night.
 
 
-    The creature, it was said, had eyes like the night,
+      Through the shadows of the trees, tall and grand,
 
-    A guardian of the forest, in the soft moonlight.
+      Guided by the moon''s soft, silver band.
 
-    With a heart of compassion, and a spirit so free,
+      The forest stirred, a symphony of sound,
 
-    A friend to all creatures, as legend tells of thee.
-
-
-    At last, in the heart of the forest so deep,
-
-    Under the watchful eyes of the moon''s soft sleep.
-
-    The explorer met the creature, in a clearing so wide,
-
-    A being of beauty, in the forest''s heart, he stood by its side.
+      In the heart of nature, where mysteries are found.
 
 
-    Their bond was formed, under the stars'' gentle glow,
+      The explorer journeyed, through the forest''s decree,
 
-    A friendship that would forever grow.
+      In search of the creature, as elusive as the sea.
 
-    In the epic of nature, a tale to be told,
+      Days turned to nights, and nights to days,
 
-    Of a heroic quest, and a friendship so bold.
+      In the epic quest, the explorer pressed on his ways.
 
 
-    So, listen well, to the whispers of the trees,
+      The creature, it was said, had eyes like the night,
 
-    To the tales of the forest, carried on the breeze.
+      A guardian of the forest, in the soft moonlight.
 
-    For in the heart of nature, a story unfolds,
+      With a heart of compassion, and a spirit so free,
 
-    Of a heroic explorer, and a mythical creature, so bold.'
-  question: Write an epic poem about a mythical creature that inhabits a vast forest,
-    and the heroic quest of a young explorer seeking to make contact with this elusive
-    being.
+      A friend to all creatures, as legend tells of thee.
+
+
+      At last, in the heart of the forest so deep,
+
+      Under the watchful eyes of the moon''s soft sleep.
+
+      The explorer met the creature, in a clearing so wide,
+
+      A being of beauty, in the forest''s heart, he stood by its side.
+
+
+      Their bond was formed, under the stars'' gentle glow,
+
+      A friendship that would forever grow.
+
+      In the epic of nature, a tale to be told,
+
+      Of a heroic quest, and a friendship so bold.
+
+
+      So, listen well, to the whispers of the trees,
+
+      To the tales of the forest, carried on the breeze.
+
+      For in the heart of nature, a story unfolds,
+
+      Of a heroic explorer, and a mythical creature, so bold.'
+    question: Write an epic poem about a mythical creature that inhabits a vast forest, and the heroic quest of a young explorer seeking to make contact
+      with this elusive being.
 task_description: ''
