--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -1,14 +1,14 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: 'A flower so bright in the glade,
+  - answer: 'A flower so bright in the glade,
 
-    By insects is never unlaid.
+      By insects is never unlaid.
 
-    With colors so grand,
+      With colors so grand,
 
-    It lures them to land,
+      It lures them to land,
 
-    In a dance of life, unafraid.'
-  question: Write a limerick that playfully describes a flower's bloom and its effect
-    on nearby insects.
+      In a dance of life, unafraid.'
+    question: Write a limerick that playfully describes a flower's bloom and its effect on nearby insects.
 task_description: ''
