--- a/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
@@ -1,67 +1,66 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: 'In the heart of the valley, where time''s river flows,
+  - answer: 'In the heart of the valley, where time''s river flows,
 
-    Stands a solitary tree, in repose.
+      Stands a solitary tree, in repose.
 
-    A sentinel of seasons, a witness to change,
+      A sentinel of seasons, a witness to change,
 
-    In the dance of the years, it has been entranced.
-
-
-    Once, it was a sapling, in a forest so grand,
-
-    Where the world was a canvas, and life was unplanned.
-
-    Now it stands alone, in the clearing it''s made,
-
-    A testament to time, in the landscape it''s laid.
+      In the dance of the years, it has been entranced.
 
 
-    Through the centuries, it has seen the sun rise and set,
+      Once, it was a sapling, in a forest so grand,
 
-    In its silence, it has not forgotten or regretted.
+      Where the world was a canvas, and life was unplanned.
 
-    It has watched the seasons, in their endless play,
+      Now it stands alone, in the clearing it''s made,
 
-    The winter''s chill, the summer''s blaze, the spring''s sweet serenade, the autumn''s
-    gentle ballet.
-
-
-    It has seen the rivers shift their course,
-
-    And the hills, once distant, draw near with force.
-
-    It has watched the forests rise and fall,
-
-    And the meadows bloom and then withdraw.
+      A testament to time, in the landscape it''s laid.
 
 
-    It has felt the tremors of the earth''s delight,
+      Through the centuries, it has seen the sun rise and set,
 
-    And the shuddering cries in the dead of the night.
+      In its silence, it has not forgotten or regretted.
 
-    It has seen the stars in their celestial play,
+      It has watched the seasons, in their endless play,
 
-    And the moon''s soft glow in the quiet of the day.
-
-
-    It has provided shelter to the creatures of the wood,
-
-    And seen them come and go, as they understood.
-
-    It has been a beacon, a friend, a guide,
-
-    In the landscape of change, it has stood with pride.
+      The winter''s chill, the summer''s blaze, the spring''s sweet serenade, the autumn''s gentle ballet.
 
 
-    And as it stands, in its solitary might,
+      It has seen the rivers shift their course,
 
-    It carries the stories of a thousand sights.
+      And the hills, once distant, draw near with force.
 
-    A silent witness, a timeless sprite,
+      It has watched the forests rise and fall,
 
-    In the heart of the valley, under the soft moonlight.'
-  question: Write a narrative poem about a solitary tree that has witnessed centuries
-    of change in the surrounding landscape.
+      And the meadows bloom and then withdraw.
+
+
+      It has felt the tremors of the earth''s delight,
+
+      And the shuddering cries in the dead of the night.
+
+      It has seen the stars in their celestial play,
+
+      And the moon''s soft glow in the quiet of the day.
+
+
+      It has provided shelter to the creatures of the wood,
+
+      And seen them come and go, as they understood.
+
+      It has been a beacon, a friend, a guide,
+
+      In the landscape of change, it has stood with pride.
+
+
+      And as it stands, in its solitary might,
+
+      It carries the stories of a thousand sights.
+
+      A silent witness, a timeless sprite,
+
+      In the heart of the valley, under the soft moonlight.'
+    question: Write a narrative poem about a solitary tree that has witnessed centuries of change in the surrounding landscape.
 task_description: ''
