--- a/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
@@ -1,176 +1,163 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: '# Manual: Performing a Security Audit for Small to Medium-Sized Businesses
+  - answer: '# Manual: Performing a Security Audit for Small to Medium-Sized Businesses
 
 
-    ## Executive Summary
+      ## Executive Summary
 
 
-    This manual outlines the process of conducting a comprehensive security audit
-    for small to medium-sized businesses. A security audit is a systematic evaluation
-    of an organization''s information systems by measuring how well they conform to
-    a set of established criteria. A systematic approach helps identify vulnerabilities,
-    assess risks, and determine the effectiveness of current security measures.
+      This manual outlines the process of conducting a comprehensive security audit for small to medium-sized businesses. A security audit is a systematic
+      evaluation of an organization''s information systems by measuring how well they conform to a set of established criteria. A systematic approach helps
+      identify vulnerabilities, assess risks, and determine the effectiveness of current security measures.
 
 
-    ## 1. Introduction
+      ## 1. Introduction
 
 
-    ### 1.1 Background
+      ### 1.1 Background
 
 
-    In today''s interconnected world, businesses of all sizes are at risk of cyber
-    threats. Performing regular security audits is crucial to maintaining a secure
-    environment and protecting sensitive data.
+      In today''s interconnected world, businesses of all sizes are at risk of cyber threats. Performing regular security audits is crucial to maintaining
+      a secure environment and protecting sensitive data.
 
 
-    ### 1.2 Objectives
+      ### 1.2 Objectives
 
 
-    The primary objectives of this manual are:
+      The primary objectives of this manual are:
 
-    - To provide a step-by-step guide for conducting a security audit.
+      - To provide a step-by-step guide for conducting a security audit.
 
-    - To identify common security vulnerabilities in small to medium-sized businesses.
+      - To identify common security vulnerabilities in small to medium-sized businesses.
 
-    - To offer recommendations for improving security measures.
+      - To offer recommendations for improving security measures.
 
 
-    ## 2. Preparation
+      ## 2. Preparation
 
 
-    ### 2.1 Define Scope
+      ### 2.1 Define Scope
 
 
-    Determine the systems, applications, and networks to be audited. This may include:
+      Determine the systems, applications, and networks to be audited. This may include:
 
-    - Network infrastructure
+      - Network infrastructure
 
-    - Servers and workstations
+      - Servers and workstations
 
-    - Databases
+      - Databases
 
-    - Cloud services
+      - Cloud services
 
-    - Websites and web applications
+      - Websites and web applications
 
-    - Email systems
+      - Email systems
 
 
-    ### 2.2 Gather Information
+      ### 2.2 Gather Information
 
 
-    Collect relevant documentation, such as network diagrams, system configurations,
-    and security policies.
+      Collect relevant documentation, such as network diagrams, system configurations, and security policies.
 
 
-    ### 2.3 Assemble Audit Team
+      ### 2.3 Assemble Audit Team
 
 
-    Form a team of individuals with expertise in various aspects of information security.
+      Form a team of individuals with expertise in various aspects of information security.
 
 
-    ## 3. Audit Process
+      ## 3. Audit Process
 
 
-    ### 3.1 Step 1: Asset Identification
+      ### 3.1 Step 1: Asset Identification
 
 
-    Create an inventory of all hardware, software, and data assets within the organization.
+      Create an inventory of all hardware, software, and data assets within the organization.
 
 
-    ### 3.2 Step 2: Vulnerability Scanning
+      ### 3.2 Step 2: Vulnerability Scanning
 
 
-    Perform automated vulnerability scans using tools such as Nessus or OpenVAS to
-    identify potential weaknesses in the system.
+      Perform automated vulnerability scans using tools such as Nessus or OpenVAS to identify potential weaknesses in the system.
 
 
-    ### 3.3 Step 3: Threat Assessment
+      ### 3.3 Step 3: Threat Assessment
 
 
-    Analyze the likelihood and potential impact of identified vulnerabilities. Consider
-    factors such as:
+      Analyze the likelihood and potential impact of identified vulnerabilities. Consider factors such as:
 
-    - Threat sources (e.g., hackers, malware, insider threats)
+      - Threat sources (e.g., hackers, malware, insider threats)
 
-    - Threat vectors (e.g., network, email, social engineering)
+      - Threat vectors (e.g., network, email, social engineering)
 
-    - Existing security controls
+      - Existing security controls
 
 
-    ### 3.4 Step 4: Risk Analysis
+      ### 3.4 Step 4: Risk Analysis
 
 
-    Determine the overall risk level for each vulnerability by evaluating the likelihood
-    of exploitation and the potential impact on the organization.
+      Determine the overall risk level for each vulnerability by evaluating the likelihood of exploitation and the potential impact on the organization.
 
 
-    ### 3.5 Step 5: Control Evaluation
+      ### 3.5 Step 5: Control Evaluation
 
 
-    Assess the effectiveness of current security controls in mitigating identified
-    risks.
+      Assess the effectiveness of current security controls in mitigating identified risks.
 
 
-    ### 3.6 Step 6: Recommendations
+      ### 3.6 Step 6: Recommendations
 
 
-    Provide actionable recommendations to address identified vulnerabilities and reduce
-    overall risk.
+      Provide actionable recommendations to address identified vulnerabilities and reduce overall risk.
 
 
-    ## 4. Reporting
+      ## 4. Reporting
 
 
-    ### 4.1 Document Findings
+      ### 4.1 Document Findings
 
 
-    Compile a detailed report of the audit findings, including:
+      Compile a detailed report of the audit findings, including:
 
-    - Executive summary
+      - Executive summary
 
-    - Audit scope and methodology
+      - Audit scope and methodology
 
-    - List of identified assets
+      - List of identified assets
 
-    - Summary of vulnerabilities and threats
+      - Summary of vulnerabilities and threats
 
-    - Risk analysis results
+      - Risk analysis results
 
-    - Recommendations for improvement
+      - Recommendations for improvement
 
 
-    ### 4.2 Present Findings
+      ### 4.2 Present Findings
 
 
-    Present the audit findings and recommendations to key stakeholders in a clear
-    and concise manner.
+      Present the audit findings and recommendations to key stakeholders in a clear and concise manner.
 
 
-    ## 5. Follow-Up
+      ## 5. Follow-Up
 
 
-    ### 5.1 Implement Recommendations
+      ### 5.1 Implement Recommendations
 
 
-    Work with the organization''s IT department or external vendors to implement recommended
-    security improvements.
+      Work with the organization''s IT department or external vendors to implement recommended security improvements.
 
 
-    ### 5.2 Schedule Regular Audits
+      ### 5.2 Schedule Regular Audits
 
 
-    Establish a schedule for performing regular security audits to ensure ongoing
-    security and compliance.
+      Establish a schedule for performing regular security audits to ensure ongoing security and compliance.
 
 
-    ## 6. Conclusion
+      ## 6. Conclusion
 
 
-    Performing a security audit is a critical step in protecting a small to medium-sized
-    business from cyber threats. By following the steps outlined in this manual, organizations
-    can identify vulnerabilities, assess risks, and implement effective security measures.'
-  question: Write a manual on how to perform a security audit for a small to medium-sized
-    business.
+      Performing a security audit is a critical step in protecting a small to medium-sized business from cyber threats. By following the steps outlined
+      in this manual, organizations can identify vulnerabilities, assess risks, and implement effective security measures.'
+    question: Write a manual on how to perform a security audit for a small to medium-sized business.
 task_description: ''
