--- a/compositional_skills/writing/grounded/meeting_insights/minutes_of_meeting/qna.yaml
+++ b/compositional_skills/writing/grounded/meeting_insights/minutes_of_meeting/qna.yaml
@@ -1,162 +1,143 @@
+---
 created_by: shivsr
 seed_examples:
-- answer: '**Minutes of Meeting**
+  - answer: '**Minutes of Meeting**
 
 
-    **Date:** [Insert Date]
+      **Date:** [Insert Date]
 
 
-    **Time:** [Insert Time]
+      **Time:** [Insert Time]
 
 
-    **Location:** [Insert Location]
+      **Location:** [Insert Location]
 
 
-    **Present:**
+      **Present:**
 
-    - Ms. Patel
+      - Ms. Patel
 
-    - Mr. Thompson
+      - Mr. Thompson
 
-    - Ms. Rodriguez
+      - Ms. Rodriguez
 
-    - Mr. Kim
+      - Mr. Kim
 
 
-    **Agenda: Employee Engagement Initiatives**
+      **Agenda: Employee Engagement Initiatives**
 
 
-    **Opening Remarks:**
+      **Opening Remarks:**
 
-    Ms. Patel welcomed everyone to the meeting, emphasizing the importance of enhancing
-    employee engagement.
+      Ms. Patel welcomed everyone to the meeting, emphasizing the importance of enhancing employee engagement.
 
 
-    **Recognition of Employee Achievements:**
+      **Recognition of Employee Achievements:**
 
-    Mr. Thompson suggested implementing regular recognition of employee achievements
-    through a monthly shout-out in the company newsletter or a quarterly awards ceremony.
+      Mr. Thompson suggested implementing regular recognition of employee achievements through a monthly shout-out in the company newsletter or a quarterly
+      awards ceremony.
 
 
-    **Personal Development:**
+      **Personal Development:**
 
-    Ms. Rodriguez proposed offering workshops, training sessions, and mentorship programs
-    to help employees feel valued and grow professionally.
+      Ms. Rodriguez proposed offering workshops, training sessions, and mentorship programs to help employees feel valued and grow professionally.
 
 
-    **Cross-Departmental Collaboration:**
+      **Cross-Departmental Collaboration:**
 
-    Mr. Kim suggested creating opportunities for cross-departmental collaboration
-    to foster innovation and help employees understand the bigger picture of the organization.
+      Mr. Kim suggested creating opportunities for cross-departmental collaboration to foster innovation and help employees understand the bigger picture
+      of the organization.
 
 
-    **Suggestion Box System:**
+      **Suggestion Box System:**
 
-    Ms. Patel proposed implementing a suggestion box system for anonymous sharing
-    of ideas or concerns, promoting open communication.
+      Ms. Patel proposed implementing a suggestion box system for anonymous sharing of ideas or concerns, promoting open communication.
 
 
-    **Team-Building Activities:**
+      **Team-Building Activities:**
 
-    Ms. Rodriguez suggested organizing team-building activities outside of work hours,
-    such as potlucks, game nights, or volunteer events, to strengthen relationships
-    and foster a sense of community.
+      Ms. Rodriguez suggested organizing team-building activities outside of work hours, such as potlucks, game nights, or volunteer events, to strengthen
+      relationships and foster a sense of community.
 
 
-    **Work-Life Balance:**
+      **Work-Life Balance:**
 
-    Mr. Kim emphasized the importance of work-life balance, encouraging flexible work
-    hours and remote work options.
+      Mr. Kim emphasized the importance of work-life balance, encouraging flexible work hours and remote work options.
 
 
-    **Wellness Program:**
+      **Wellness Program:**
 
-    Mr. Thompson proposed creating a wellness program that includes fitness challenges,
-    meditation sessions, or stress management workshops to promote employee health
-    and happiness.
+      Mr. Thompson proposed creating a wellness program that includes fitness challenges, meditation sessions, or stress management workshops to promote
+      employee health and happiness.
 
 
-    **Employee Resource Group:**
+      **Employee Resource Group:**
 
-    Mr. Kim suggested establishing an Employee Resource Group to support diversity
-    and inclusion initiatives, helping employees feel more connected and included.
+      Mr. Kim suggested establishing an Employee Resource Group to support diversity and inclusion initiatives, helping employees feel more connected and
+      included.
 
 
-    **Action Plan:**
+      **Action Plan:**
 
-    The group agreed to evaluate the suggestions and create an action plan, reconvening
-    the following week to discuss the next steps.
+      The group agreed to evaluate the suggestions and create an action plan, reconvening the following week to discuss the next steps.
 
 
-    **Closing Remarks:**
+      **Closing Remarks:**
 
-    Ms. Patel thanked everyone for their valuable input, expressing excitement about
-    implementing the new employee engagement initiatives.
+      Ms. Patel thanked everyone for their valuable input, expressing excitement about implementing the new employee engagement initiatives.
 
 
-    **Next Meeting:**
+      **Next Meeting:**
 
-    [Insert Date and Time for the next meeting]
+      [Insert Date and Time for the next meeting]
 
 
-    **Prepared by:** [Insert Name]
+      **Prepared by:** [Insert Name]
 
-    **Approved by:** [Insert Name]'
-  context: '*Ms. Patel:* Good morning, everyone. Today, we''re here to discuss ways
-    to enhance employee engagement. I''d love to hear your ideas.
+      **Approved by:** [Insert Name]'
+    context: '*Ms. Patel:* Good morning, everyone. Today, we''re here to discuss ways to enhance employee engagement. I''d love to hear your ideas.
 
 
-    *Mr. Thompson:* I think regular recognition of employee achievements could be
-    a great start. A monthly shout-out in our company newsletter or a quarterly awards
-    ceremony could work wonders.
+      *Mr. Thompson:* I think regular recognition of employee achievements could be a great start. A monthly shout-out in our company newsletter or a quarterly
+      awards ceremony could work wonders.
 
 
-    *Ms. Rodriguez:* I agree, but let''s not forget about personal development. Offering
-    workshops, training sessions, and mentorship programs can help employees feel
-    valued and grow professionally.
+      *Ms. Rodriguez:* I agree, but let''s not forget about personal development. Offering workshops, training sessions, and mentorship programs can help
+      employees feel valued and grow professionally.
 
 
-    *Mr. Kim:* Absolutely. And we should consider creating opportunities for cross-departmental
-    collaboration. This not only fosters innovation but also helps employees understand
-    the bigger picture of our organization.
+      *Mr. Kim:* Absolutely. And we should consider creating opportunities for cross-departmental collaboration. This not only fosters innovation but also
+      helps employees understand the bigger picture of our organization.
 
 
-    *Ms. Patel:* Great suggestions! How about implementing a suggestion box system
-    where employees can anonymously share their ideas or concerns?
+      *Ms. Patel:* Great suggestions! How about implementing a suggestion box system where employees can anonymously share their ideas or concerns?
 
 
-    *Mr. Thompson:* That''s a fantastic idea, Rita. It promotes open communication
-    and gives everyone a voice.
+      *Mr. Thompson:* That''s a fantastic idea, Rita. It promotes open communication and gives everyone a voice.
 
 
-    *Ms. Rodriguez:* We could also organize team-building activities outside of work
-    hours. Potlucks, game nights, or volunteer events can strengthen relationships
-    and foster a sense of community.
+      *Ms. Rodriguez:* We could also organize team-building activities outside of work hours. Potlucks, game nights, or volunteer events can strengthen
+      relationships and foster a sense of community.
 
 
-    *Mr. Kim:* And let''s not forget about work-life balance. Encouraging flexible
-    work hours and remote work options can help employees manage their personal lives
-    while staying committed to their jobs.
+      *Mr. Kim:* And let''s not forget about work-life balance. Encouraging flexible work hours and remote work options can help employees manage their
+      personal lives while staying committed to their jobs.
 
 
-    *Ms. Patel:* Yes, absolutely. We should ensure that our policies support a healthy
-    work-life balance. Any other ideas?
+      *Ms. Patel:* Yes, absolutely. We should ensure that our policies support a healthy work-life balance. Any other ideas?
 
 
-    *Mr. Thompson:* How about creating a wellness program that includes fitness challenges,
-    meditation sessions, or stress management workshops?
+      *Mr. Thompson:* How about creating a wellness program that includes fitness challenges, meditation sessions, or stress management workshops?
 
 
-    *Ms. Rodriguez:* That''s a wonderful idea, Tom. A healthy employee is a happy
-    employee.
+      *Ms. Rodriguez:* That''s a wonderful idea, Tom. A healthy employee is a happy employee.
 
 
-    *Mr. Kim:* And we could establish an Employee Resource Group to support diversity
-    and inclusion initiatives. This can help employees feel more connected and included.
+      *Mr. Kim:* And we could establish an Employee Resource Group to support diversity and inclusion initiatives. This can help employees feel more connected
+      and included.
 
 
-    *Ms. Patel:* Wonderful ideas, everyone! Let''s take some time to evaluate these
-    suggestions and create an action plan. We''ll reconvene next week to discuss the
-    next steps.'
-  question: Could you generate the minutes of the meeting from the given transcript?
+      *Ms. Patel:* Wonderful ideas, everyone! Let''s take some time to evaluate these suggestions and create an action plan. We''ll reconvene next week
+      to discuss the next steps.'
+    question: Could you generate the minutes of the meeting from the given transcript?
 task_description: ''
