ci: Add workflow for YAML lint
Add new workflow to `yamllint` compositional skills.

This will be replaced by a smarter version that checks the
qna.yml schema.

Signed-off-by: Christian Kadner <ckadner@us.ibm.com>
Signed-off-by: Eric Rich <erich@redhat.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main 
+      - main
   pull_request:
     branches:
       - main
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
-        
+
       - name: "Run YAML linter"
         run: |
-          yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}, yaml-files: ['qna.yaml']}" .
+          yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}, yaml-files: ['qna.yaml']}" ./compositional_skills/
