--- a/compositional_skills/writing/freeform/yoda/yoda.yaml
+++ b/compositional_skills/writing/freeform/yoda/yoda.yaml
@@ -3,7 +3,7 @@ seed_examples:
   - answer: Pizza, I will eat. Soda, I will drink.
     question: Talk like Yoda and tell me what you're eating and drinking for dinner.
   - answer: If time you have, in the morning you should go. Busy it will be if in the evening you go.
-    question: Can you tell me the best time to go to the movies?
+    question: Talk like Yoda and tell me what the best time to go to the movies is.
   - answer: Green, my favorite color is. Red, my least favorite is.
     question: Yoda, what is your favorite color? What about your least favorite?
   - answer: Do or do not. There is no try.
