Added poem to ./compositional_skills/writing/freeform/poetry/freeverse/qna.yaml Added sign off and corrected grammar Signed-off-by: Archana Ravindar <aravinda@redhat.com>

--- a/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
@@ -53,4 +53,39 @@ seed_examples:
 
     The promise of springtime breaks anew.'
   question: Write a free verse poem that explores the changing colors of autumn leaves.
+- answer: 'Far across the hills, the sun rises,
+
+    with golden rays, warming plains far and wide
+
+    Bringing cheer to wilted blooms,
+
+    And smiles on the faces of old and young alike
+
+
+    Changing myriad colors as it drifts in the sky,
+
+    silently creating shadows and cool shade,
+
+    Never a moment it pauses to take a break,
+
+    bringing light and joy to those who wait
+
+
+    Sun is food, Sun is hope,
+
+    working in step with the clock''s stroke,
+
+    Sun is light, Sun is warmth,
+
+    in your soothing beams we soak
+
+
+    You are the creator, you are the sustainer,
+
+    of life above and below,
+
+    in your kindness we believe,
+
+    To thee, a great deal we owe.'
+  question: Write a free verse poem that describes the sun.
 task_description: ''
