--- a/compositional_skills/writing/freeform/eli5/qna.yaml
+++ b/compositional_skills/writing/freeform/eli5/qna.yaml
@@ -4,7 +4,7 @@ seed_examples:
       It gives off heat and light, just like a campfire, but way bigger and hotter!
       The Earth is like a marshmallow you're holding near the campfire.
       It gets warm from the heat of the sun, and that's what makes our planet have different seasons."
-    question: Explain how the sun makes the Earth warm like I'm 5.
+    question: Explain how the sun makes the Earth warm like I'm 5 years old.
 
   - answer: "Think of your body as a big city with lots of tiny workers.
       Your cells are like the workers, and they all have special jobs to do.
