Add more examples of spelling random words
Signed-off-by: Martin Murphy <mmurphy@redhat.com>

--- a/compositional_skills/extraction/information/phonetic/alphabet/nato/qna.yaml
+++ b/compositional_skills/extraction/information/phonetic/alphabet/nato/qna.yaml
@@ -2,9 +2,23 @@ created_by: mmurphy
 seed_examples:
 - answer: 'romeo-echo-delta-hotel-alpha-tango'
   question: 'Spell ''redhat'' using the nato phonetic alphabet'
+- answer: 'Romeo, Echo, Delta, Hotel, Alpha, Tango'
+  question: 'Spell ''redhat'' using the nato phonetic alphabet'
+- answer: 'Sierra, Papa, Echo, Lima, Lima'
+  question: 'Spell ''spell'' using the nato phonetic alphabet'
+- answer: 'tango-hotel-echo quebec-uniform-india-charlie-kilo
+           bravo-romeo-oscar-whiskey-november foxtrot-oscar-xray'
+  question: 'Spell ''The quick brown fox'' using the nato phonetic alphabet'
+- answer: 'juliett-uniform-mike-papa-sierra oscar-victor-echo-romeo tango-hotel-echo
+           lima-alpha-zulu-yankee delta-oscar-golf-sierra'
+  question: 'Spell ''jumps over the lazy dogs'' using the nato phonetic alphabet'
+- answer: 'Alpha, November, Sierra, Whiskey, Echo, Romeo'
+  question: 'Spell ''answer'' using the nato phonetic alphabet'
+- answer: 'Quebec, Uniform, Echo, Sierra, Tango, India, Oscar, November'
+  question: 'Spell ''question'' using the nato phonetic alphabet'
 - answer: 'oscar-papa-echo-november sierra-oscar-uniform-romeo-charlie-echo'
   question: 'using the Nato phonetic alphabet spell ''open source'''
-- answer: 'If someone is having a problem understanding a particular word, 
+- answer: 'If someone is having a problem understanding a particular word,
            you can spell it out using the NATO phonetic alphabet, which is widely used in radio communications.
            To indicate that you are about to spell the word, it''s normally preceeded by the phrase ''I spell'',
            for example, to spell the would ''phonetic'' you could say
@@ -13,9 +27,109 @@ seed_examples:
 - answer: 'The Nato phonetic alphabet is use to aid in the clear reception of information over poor radio
            communication links,
            where each letter is replaced by a particular word,
-           The alphapet "ABCDEFGHIJKLMNOPQRSTUVWXYZ" is replaced by the words 
+           The alphapet "ABCDEFGHIJKLMNOPQRSTUVWXYZ" is replaced by the words
            "Alpha-Bravo-Charlie-Delta-Echo-Foxtrot-Golf-Hotel-India-Juliett-Kilo-Lima-Mike-
            November-Oscar-Papa-Quebec-Romeo-Sierra-Tango-Uniform-Victor-Whiskey-Xray-Yankee-Zulu"
            for example the word "what" is replaced with "whiskey-hotel-alpha-tango"'
   question: 'what is the Nato phonetic alphabet'
+- answer: 'Golf, Alpha, Tango, Echo, Kilo, Echo, Echo, Papa, Echo, Romeo'
+  question: 'Spell ''gatekeeper'' using the NATO phonetic alphabet'
+- answer: 'Alpha, Tango, Romeo, Oscar, Papa, India, Delta, Alpha, Echo'
+  question: 'Spell ''Atropidae'' using the NATO phonetic alphabet'
+- answer: 'Sierra, Hotel, Alpha, Charlie, Kilo, Lima, Echo, Whiskey, India, Sierra, Echo'
+  question: 'Spell ''shacklewise'' using the NATO phonetic alphabet'
+- answer: 'Alpha, Romeo, Charlie, Hotel, India, Bravo, Echo, November, Tango, Hotel, Oscar, Sierra'
+  question: 'Spell ''archibenthos'' using the NATO phonetic alphabet'
+- answer: 'Mike, Oscar, Romeo, Alpha, Charlie, Echo, Oscar, Uniform, Sierra'
+  question: 'Spell ''moraceous'' using the NATO phonetic alphabet'
+- answer: 'Sierra, Tango, Alpha, Tango, Echo, Foxtrot, Uniform, Lima'
+  question: 'Spell ''stateful'' using the NATO phonetic alphabet'
+- answer: 'Whiskey, India, Sierra, Hotel, Mike, Alpha, Yankee'
+  question: 'Spell ''wishmay'' using the NATO phonetic alphabet'
+- answer: 'Foxtrot, Lima, Oscar, Oscar, Romeo, Echo, Romeo'
+  question: 'Spell ''floorer'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Oscar, Uniform, November, Tango, Echo, Romeo, Tango, Romeo, Alpha, Victor, Echo, Romeo, Sierra, Echo'
+  question: 'Spell ''countertraverse'' using the NATO phonetic alphabet'
+- answer: 'Uniform, November, Charlie, Romeo, Alpha, Victor, India, November, Golf, Lima, Yankee'
+  question: 'Spell ''uncravingly'' using the NATO phonetic alphabet'
+- answer: 'Echo, Charlie, Hotel, India, November, Oscar, Sierra, Papa, Hotel, Alpha, Echo, Romeo, India, Tango, Echo, Sierra'
+  question: 'Spell ''Echinosphaerites'' using the NATO phonetic alphabet'
+- answer: 'Bravo, Oscar, Romeo, Alpha, Charlie, India, Foxtrot, Echo, Romeo, Oscar, Uniform, Sierra'
+  question: 'Spell ''boraciferous'' using the NATO phonetic alphabet'
+- answer: 'Mike, Oscar, Romeo, India, November, Golf, Alpha, Delta'
+  question: 'Spell ''moringad'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Oscar, November, Foxtrot, India, Delta, Echo, Romeo'
+  question: 'Spell ''confider'' using the NATO phonetic alphabet'
+- answer: 'Sierra, Uniform, Papa, Echo, Romeo, Charlie, Oscar, Oscar, Lima'
+  question: 'Spell ''supercool'' using the NATO phonetic alphabet'
+- answer: 'Bravo, Oscar, Tango, Uniform, Lima, India, November, Uniform, Mike'
+  question: 'Spell ''botulinum'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Alpha, Lima, Lima, India, Golf, Romeo, Alpha, Papa, Hotel, Echo, Romeo'
+  question: 'Spell ''calligrapher'' using the NATO phonetic alphabet'
+- answer: 'Papa, Romeo, Echo, Sierra, India, Golf, November'
+  question: 'Spell ''presign'' using the NATO phonetic alphabet'
+- answer: 'Romeo, Echo, Victor, India, Sierra, Echo, Romeo'
+  question: 'Spell ''reviser'' using the NATO phonetic alphabet'
+- answer: 'Papa, Alpha, Romeo, Alpha, Mike, Echo, Tango, Romeo, India, Tango, India, Charlie'
+  question: 'Spell ''parametritic'' using the NATO phonetic alphabet'
+- answer: 'Bravo, Uniform, Tango, Yankee, Lima, India, Charlie'
+  question: 'Spell ''butylic'' using the NATO phonetic alphabet'
+- answer: 'Mike, Yankee, Tango, Hotel, Oscar, Mike, Alpha, November, India, Alpha'
+  question: 'Spell ''mythomania'' using the NATO phonetic alphabet'
+- answer: 'Papa, India, Sierra, Tango, Oscar, Lima, Golf, Romeo, Alpha, Mike'
+  question: 'Spell ''pistolgram'' using the NATO phonetic alphabet'
+- answer: 'Sierra, Alpha, Romeo, Papa, Oscar'
+  question: 'Spell ''sarpo'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Alpha, November, Tango, Hotel, Alpha, Romeo, India, Delta, India, Alpha, November'
+  question: 'Spell ''cantharidian'' using the NATO phonetic alphabet'
+- answer: 'Papa, Oscar, Lima, Yankee, November, Oscar, Mike, India, Alpha, Lima'
+  question: 'Spell ''polynomial'' using the NATO phonetic alphabet'
+- answer: 'India, Mike, Papa, Romeo, Oscar, Victor, Alpha, Bravo, Lima, Echo, November, Echo, Sierra, Sierra'
+  question: 'Spell ''improvableness'' using the NATO phonetic alphabet'
+- answer: 'Tango, Romeo, Oscar, Whiskey, Lima, Echo, Sierra, Whiskey, Oscar, Romeo, Tango, Hotel, India, Tango, Echo'
+  question: 'Spell ''trowlesworthite'' using the NATO phonetic alphabet'
+- answer: 'Delta, India, Sierra, Lima, Oscar, Victor, Echo'
+  question: 'Spell ''dislove'' using the NATO phonetic alphabet'
+- answer: 'Alpha, November, Tango, Hotel, Oscar, Lima, Oscar, Golf, India, Charlie, Alpha, Lima'
+  question: 'Spell ''anthological'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Alpha, Lima, Oscar, Romeo, India, Foxtrot, India, Charlie, Sierra'
+  question: 'Spell ''calorifics'' using the NATO phonetic alphabet'
+- answer: 'Tango, Alpha, November, November, India, Delta, Echo'
+  question: 'Spell ''tannide'' using the NATO phonetic alphabet'
+- answer: 'Romeo, Echo, Charlie, Uniform, Bravo, Alpha, November, Tango'
+  question: 'Spell ''recubant'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Lima, Oscar, Whiskey, Romeo, India, November, Golf'
+  question: 'Spell ''clowring'' using the NATO phonetic alphabet'
+- answer: 'Quebec, Uniform, India, Tango, Echo'
+  question: 'Spell ''quite'' using the NATO phonetic alphabet'
+- answer: 'Echo, November, Delta, Oscar, Charlie, Alpha, Romeo, Delta, India, Alpha, Charlie'
+  question: 'Spell ''endocardiac'' using the NATO phonetic alphabet'
+- answer: 'Kilo, Echo, Echo, Lima, India, November, Golf'
+  question: 'Spell ''keeling'' using the NATO phonetic alphabet'
+- answer: 'Golf, Alpha, Lima, Echo, Oscar, Papa, India, Tango, Hotel, Echo, Charlie, Uniform, Sierra'
+  question: 'Spell ''Galeopithecus'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Lima, Echo, Alpha, Romeo, Alpha, November, Charlie, Echo'
+  question: 'Spell ''clearance'' using the NATO phonetic alphabet'
+- answer: 'Hotel, Echo, Lima, India, Oscar, Papa, Hotel, Oscar, Bravo, India, Charlie'
+  question: 'Spell ''heliophobic'' using the NATO phonetic alphabet'
+- answer: 'Golf, Oscar, Sierra, Papa, Echo, Lima, Lima, India, Kilo, Echo'
+  question: 'Spell ''gospellike'' using the NATO phonetic alphabet'
+- answer: 'Sierra, Uniform, Papa, Echo, Romeo, Alpha, Romeo, Tango, India, Foxtrot, India, Charlie, India, Alpha, Lima'
+  question: 'Spell ''superartificial'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Alpha, November, Zulu, Oscar, November'
+  question: 'Spell ''canzon'' using the NATO phonetic alphabet'
+- answer: 'Lima, Echo, Victor, Alpha, November, Alpha'
+  question: 'Spell ''Levana'' using the NATO phonetic alphabet'
+- answer: 'Alpha, Sierra, Sierra, Alpha, Romeo, Tango'
+  question: 'Spell ''assart'' using the NATO phonetic alphabet'
+- answer: 'Oscar, Sierra, Tango, India, Oscar, Lima, Echo'
+  question: 'Spell ''ostiole'' using the NATO phonetic alphabet'
+- answer: 'Uniform, November, Charlie, Oscar, Mike, Papa, Lima, Echo, Tango, Alpha, Bravo, Lima, Echo'
+  question: 'Spell ''uncompletable'' using the NATO phonetic alphabet'
+- answer: 'Echo, Uniform, Papa, Lima, Alpha, Sierra, Tango, India, Charlie'
+  question: 'Spell ''euplastic'' using the NATO phonetic alphabet'
+- answer: 'Lima, Yankee, Romeo, Alpha, Tango, Echo'
+  question: 'Spell ''lyrate'' using the NATO phonetic alphabet'
+- answer: 'Charlie, Hotel, Lima, Oscar, Romeo, Oscar, Zulu, India, November, Charlie, Alpha, Tango, Echo'
+  question: 'Spell ''chlorozincate'' using the NATO phonetic alphabet'
 task_description: 'Use the NATO Phonetic alphabet'
